--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-    <title>J&J Bakery</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <title>J&J Bakery</title>
 </head>
 <body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
+  <div id="app"></div>
+  <script src="/bundle.js"></script>
 </body>
 </html>
